Restructure site for clean URLs without .html extensions

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300&family=Cinzel:wght@400;600&family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -18,11 +18,11 @@
             <span class="ptv"><span class="p-letter">P</span>TV</span>
         </h1>
         <nav class="nav-left">
-            <a href="index.html" class="nav-link">HOME</a>
+            <a href="/" class="nav-link">HOME</a>
             <div class="dropdown">
                 <button class="dropdown-btn">FILMS</button>
                 <div class="dropdown-content">
-                    <a href="midnight-city.html">MIDNIGHT CITY</a>
+                    <a href="/midnight-city">MIDNIGHT CITY</a>
                     <a href="#film2">NEON DREAMS</a>
                     <a href="#film3">URBAN SILENCE</a>
                     <a href="#film4">THE LAST FRAME</a>
@@ -30,7 +30,7 @@
                     <a href="#film6">CONCRETE POETRY</a>
                 </div>
             </div>
-            <a href="contact.html" class="nav-link active">CONTACT</a>
+            <a href="/contact" class="nav-link active">CONTACT</a>
         </nav>
         <nav class="nav-right">
             <a href="https://www.instagram.com/petalontv/" target="_blank" class="social-link" aria-label="Instagram">
@@ -66,6 +66,6 @@
         <p>CONTACT: <a href="mailto:hello@example.com">HELLO@EXAMPLE.COM</a></p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
