--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <span class="ptv"><span class="p-letter">P</span>TV</span>
         </h1>
         <nav class="nav-left">
-            <a href="index.html" class="nav-link active">HOME</a>
+            <a href="/" class="nav-link active">HOME</a>
             <div class="dropdown">
                 <button class="dropdown-btn">FILMS</button>
                 <div class="dropdown-content">
-                    <a href="midnight-city.html">MIDNIGHT CITY</a>
+                    <a href="/midnight-city">MIDNIGHT CITY</a>
                     <a href="#film2">NEON DREAMS</a>
                     <a href="#film3">URBAN SILENCE</a>
                     <a href="#film4">THE LAST FRAME</a>
@@ -30,7 +30,7 @@
                     <a href="#film6">CONCRETE POETRY</a>
                 </div>
             </div>
-            <a href="contact.html" class="nav-link">CONTACT</a>
+            <a href="/contact" class="nav-link">CONTACT</a>
         </nav>
         <nav class="nav-right">
             <a href="https://www.instagram.com/petalontv/" target="_blank" class="social-link" aria-label="Instagram">
@@ -47,7 +47,7 @@
 
     <!-- Main Content - Film Grid -->
     <main class="film-grid">
-        <a href="midnight-city.html" class="film-item" id="film1" style="text-decoration: none; color: inherit;">
+        <a href="/midnight-city" class="film-item" id="film1" style="text-decoration: none; color: inherit;">
             <div class="film-image-wrapper">
                 <div class="placeholder-image" style="background-color: #0000ff; color: #ffffff;">PLACEHOLDER</div>
             </div>
