--- a/midnight-city/index.html
+++ b/midnight-city/index.html
@@ -18,11 +18,11 @@
             <span class="ptv"><span class="p-letter">P</span>TV</span>
         </h1>
         <nav class="nav-left">
-            <a href="/" class="nav-link">HOME</a>
+            <a href="../" class="nav-link">HOME</a>
             <div class="dropdown">
                 <button class="dropdown-btn active">FILMS</button>
                 <div class="dropdown-content">
-                    <a href="/midnight-city">MIDNIGHT CITY</a>
+                    <a href="../midnight-city">MIDNIGHT CITY</a>
                     <a href="#film2">NEON DREAMS</a>
                     <a href="#film3">URBAN SILENCE</a>
                     <a href="#film4">THE LAST FRAME</a>
@@ -30,7 +30,7 @@
                     <a href="#film6">CONCRETE POETRY</a>
                 </div>
             </div>
-            <a href="/contact" class="nav-link">CONTACT</a>
+            <a href="../contact" class="nav-link">CONTACT</a>
         </nav>
         <nav class="nav-right">
             <a href="https://www.instagram.com/petalontv/" target="_blank" class="social-link" aria-label="Instagram">
