Fix CSS and JS paths for subdirectory pages

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300&family=Cinzel:wght@400;600&family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -66,6 +66,6 @@
         <p>CONTACT: <a href="mailto:hello@example.com">HELLO@EXAMPLE.COM</a></p>
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
