--- a/contact/index.html
+++ b/contact/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300&family=Cinzel:wght@400;600&family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://api.fontshare.com/v2/css?f[]=general-sans@400,500,600,700&f[]=satoshi@400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="fade-in">
@@ -51,7 +52,7 @@
             <div class="placeholder-profile">PROFILE PHOTO</div>
         </div>
         <div class="contact-info">
-            <h2>ALEX JOHNSON</h2>
+            <h2><span class="p-letter">P</span><span style="font-style: italic;">TV</span></h2>
             <p class="contact-email"><a href="mailto:hello@example.com">HELLO@EXAMPLE.COM</a></p>
             <p class="contact-bio">
                 Cinematographer and visual storyteller with a passion for capturing moments that resonate. 
