--- a/midnight-city/index.html
+++ b/midnight-city/index.html
@@ -52,7 +52,7 @@
         <!-- Film Title Section -->
         <div class="film-header">
             <h2 class="film-detail-title">MIDNIGHT CITY</h2>
-            <p class="film-producer">Produced by PTV</p>
+            <p class="film-producer">Written, filmed and edited by <i>P</i>TV</p>
         </div>
 
         <!-- Video Section -->
