Update email to contact@petalontv.com

--- a/contact/index.html
+++ b/contact/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="contact-info">
             <h2><span class="p-letter">P</span><span style="font-style: italic;">TV</span></h2>
-            <p class="contact-email"><a href="mailto:hello@example.com">HELLO@EXAMPLE.COM</a></p>
+            <p class="contact-email"><a href="mailto:contact@petalontv.com">CONTACT@PETALONTV.COM</a></p>
             <p class="contact-bio">
                 Cinematographer and visual storyteller with a passion for capturing moments that resonate. 
                 Specializing in narrative-driven imagery with a focus on composition, lighting, and mood. 
@@ -65,7 +65,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>CONTACT: <a href="mailto:hello@example.com">HELLO@EXAMPLE.COM</a></p>
+        <p>CONTACT: <a href="mailto:contact@petalontv.com">CONTACT@PETALONTV.COM</a></p>
     </footer>
 
     <script src="../script.js"></script>
