--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>CONTACT: <a href="mailto:hello@example.com">HELLO@EXAMPLE.COM</a></p>
+        <p>CONTACT: <a href="mailto:contact@petalontv.com">CONTACT@PETALONTV.COM</a></p>
     </footer>
 
     <script src="script.js"></script>
