--- a/midnight-city/index.html
+++ b/midnight-city/index.html
@@ -59,12 +59,16 @@
         <div class="video-container">
             <div class="video-wrapper">
                 <!-- Placeholder for Vimeo embed -->
-                <div class="placeholder-video">
-                    <p>VIMEO VIDEO EMBED</p>
-                    <p style="font-size: 14px; margin-top: 10px;">Replace with: &lt;iframe src="https://vimeo.com/1132043431?share=copy&fl=sv&fe=ci"&gt;&lt;/iframe&gt;</p>
-                </div>
-            </div>
-        </div>
+<div class="placeholder-video">
+    <iframe 
+        src="https://player.vimeo.com/video/1132043431" 
+        width="640" 
+        height="360" 
+        frameborder="0" 
+        allow="autoplay; fullscreen; picture-in-picture" 
+        allowfullscreen>
+    </iframe>
+</div>
 
         <!-- Photo Gallery Section -->
         <div class="photo-gallery">
