--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="dropdown">
                 <button class="dropdown-btn">FILMS</button>
                 <div class="dropdown-content">
-                    <a href="./midnight-city">MIDNIGHT CITY</a>
+                    <a href="./midnight-city">AUTUMN</a>
                     <a href="#film2">NEON DREAMS</a>
                     <a href="#film3">URBAN SILENCE</a>
                     <a href="#film4">THE LAST FRAME</a>
@@ -52,7 +52,7 @@
             <div class="film-image-wrapper">
                 <div class="placeholder-image" style="background-color: #0000ff; color: #ffffff;">PLACEHOLDER</div>
             </div>
-            <h3 class="film-title">MIDNIGHT CITY</h3>
+            <h3 class="film-title">AUTUMN</h3>
         </a>
 
         <div class="film-item" id="film2">
