--- a/midnight-city/index.html
+++ b/midnight-city/index.html
@@ -59,15 +59,20 @@
         <div class="video-container">
             <div class="video-wrapper">
                 <!-- Placeholder for Vimeo embed -->
-<div class="placeholder-video" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-    <iframe 
-        src="https://player.vimeo.com/video/1132043431" 
-        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
-        frameborder="0" 
-        allow="autoplay; fullscreen; picture-in-picture" 
-        allowfullscreen>
-    </iframe>
+<div class="placeholder-video">
+    <p>VIMEO VIDEO EMBED</p>
+    <p style="font-size: 14px; margin-top: 10px;">
+        Replace with: 
+        &lt;iframe 
+            src="https://player.vimeo.com/video/1132043431" 
+            width="640" 
+            height="360" 
+            frameborder="0" 
+            allow="autoplay; fullscreen; picture-in-picture" 
+            allowfullscreen&gt;&lt;/iframe&gt;
+    </p>
 </div>
+
 
 
         <!-- Photo Gallery Section -->
