--- a/midnight-city/index.html
+++ b/midnight-city/index.html
@@ -62,19 +62,11 @@
 <div class="placeholder-video">
     <p>VIMEO VIDEO EMBED</p>
     <p style="font-size: 14px; margin-top: 10px;">
-        Replace with: 
-        &lt;iframe 
-            src="https://player.vimeo.com/video/1132043431" 
-            width="640" 
-            height="360" 
-            frameborder="0" 
-            allow="autoplay; fullscreen; picture-in-picture" 
-            allowfullscreen&gt;&lt;/iframe&gt;
+        Replace with: &lt;iframe src="https://vimeo.com/1132043431?share=copy&fl=sv&fe=ci"&gt;&lt;/iframe&gt;
     </p>
 </div>
-
-
-
+</div>
+</div>
         <!-- Photo Gallery Section -->
         <div class="photo-gallery">
             <div class="photo-row">
