--- a/midnight-city/index.html
+++ b/midnight-city/index.html
@@ -56,16 +56,18 @@
         </div>
 
         <!-- Video Section -->
-        <div class="video-container">
-            <div class="video-wrapper">
-                <!-- Placeholder for Vimeo embed -->
-<div class="placeholder-video">
-    <p>VIMEO VIDEO EMBED</p>
-    <p style="font-size: 14px; margin-top: 10px;">
-        Replace with: &lt;iframe src="https://vimeo.com/1132043431?share=copy&fl=sv&fe=ci"&gt;&lt;/iframe&gt;
-    </p>
-</div>
-</div>
+       <div class="video-container">
+    <div class="video-wrapper">
+        <div class="placeholder-video" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe 
+                src="https://player.vimeo.com/video/1132043431" 
+                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
+                frameborder="0" 
+                allow="autoplay; fullscreen; picture-in-picture" 
+                allowfullscreen>
+            </iframe>
+        </div>
+    </div>
 </div>
         <!-- Photo Gallery Section -->
         <div class="photo-gallery">
