--- a/midnight-city/index.html
+++ b/midnight-city/index.html
@@ -72,34 +72,22 @@
         <!-- Photo Gallery Section -->
 <div class="photo-gallery">
     <div class="photo-row">
-        <div class="photo-item">
-            <img src="photos/Screenshot 2025-10-30 at 19.53.26.png" alt="Autumn Scene 1">
-        </div>
-        <div class="photo-item">
-            <img src="photos/Screenshot 2025-10-30 at 19.54.18.png" alt="Autumn Scene 2">
-        </div>
+        <div class="photo-item"><img src="../photos/Screenshot 2025-10-30 at 19.53.26.png" alt="Autumn Scene 1"></div>
+        <div class="photo-item"><img src="../photos/Screenshot 2025-10-30 at 19.54.18.png" alt="Autumn Scene 2"></div>
     </div>
 
     <div class="photo-row">
-        <div class="photo-item">
-            <img src="photos/Screenshot 2025-10-30 at 19.54.51.png" alt="Autumn Scene 3">
-        </div>
-        <div class="photo-item">
-            <img src="photos/Screenshot 2025-10-30 at 19.55.32.png" alt="Autumn Scene 4">
-        </div>
+        <div class="photo-item"><img src="../photos/Screenshot 2025-10-30 at 19.54.51.png" alt="Autumn Scene 3"></div>
+        <div class="photo-item"><img src="../photos/Screenshot 2025-10-30 at 19.55.32.png" alt="Autumn Scene 4"></div>
     </div>
 
     <div class="photo-row">
-        <div class="photo-item">
-            <img src="photos/Screenshot 2025-10-30 at 19.56.12.png" alt="Autumn Scene 5">
-        </div>
-        <div class="photo-item">
-            <img src="photos/autumn film 1.png" alt="Autumn Scene 6">
-        </div>
+        <div class="photo-item"><img src="../photos/Screenshot 2025-10-30 at 19.56.12.png" alt="Autumn Scene 5"></div>
+        <div class="photo-item"><img src="../photos/autumn film 1.png" alt="Autumn Scene 6"></div>
     </div>
 </div>
-    </main>
 
+    </main>
     <!-- Footer -->
     <footer class="footer">
         <p>CONTACT: <a href="mailto:contact@petalontv.com">CONTACT@PETALONTV.COM</a></p>
