--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main class="film-grid">
         <a href="./midnight-city" class="film-item" id="film1" style="text-decoration: none; color: inherit;">
             <div class="film-image-wrapper">
-                <div class="placeholder-image" style="background-color: #0000ff; color: #ffffff;">PLACEHOLDER</div>
+                <img src="./photos/Screenshot 2025-10-30 at 19.54.51.png" alt="Autumn film thumbnail" class="film-image">
             </div>
             <h3 class="film-title">AUTUMN</h3>
         </a>
@@ -59,35 +59,35 @@
             <div class="film-image-wrapper">
                 <div class="placeholder-image">PLACEHOLDER</div>
             </div>
-            <h3 class="film-title">NEON DREAMS</h3>
+            <h3 class="film-title">COMMING SOON...</h3>
         </div>
 
         <div class="film-item" id="film3">
             <div class="film-image-wrapper">
                 <div class="placeholder-image">PLACEHOLDER</div>
             </div>
-            <h3 class="film-title">URBAN SILENCE</h3>
+            <h3 class="film-title">COMMING SOON...</h3>
         </div>
 
         <div class="film-item" id="film4">
             <div class="film-image-wrapper">
                 <div class="placeholder-image">PLACEHOLDER</div>
             </div>
-            <h3 class="film-title">THE LAST FRAME</h3>
+            <h3 class="film-title">COMMING SOON...</h3>
         </div>
 
         <div class="film-item" id="film5">
             <div class="film-image-wrapper">
                 <div class="placeholder-image">PLACEHOLDER</div>
             </div>
-            <h3 class="film-title">BLUE HOUR</h3>
+            <h3 class="film-title">COMMING SOON...</h3>
         </div>
 
         <div class="film-item" id="film6">
             <div class="film-image-wrapper">
                 <div class="placeholder-image">PLACEHOLDER</div>
             </div>
-            <h3 class="film-title">CONCRETE POETRY</h3>
+            <h3 class="film-title">COMMING SOON...</h3>
         </div>
     </main>
 
