--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main class="film-grid">
         <a href="./midnight-city" class="film-item" id="film1" style="text-decoration: none; color: inherit;">
             <div class="film-image-wrapper">
-                <img src="./photos/Screenshot 2025-10-30 at 19.54.51.png" alt="Autumn film thumbnail" class="film-image">
+                <img src="./photos/autumn film thubnail.png" alt="Autumn film thumbnail" class="film-image">
             </div>
             <h3 class="film-title">AUTUMN</h3>
         </a>
