--- a/midnight-city/index.html
+++ b/midnight-city/index.html
@@ -78,7 +78,7 @@
 
     <div class="photo-row">
         <div class="photo-item"><img src="../photos/Screenshot 2025-10-30 at 19.56.12.png" alt="Autumn Scene 5"></div>
-        <div class="photo-item"><img src="../photos/autumn film 1.png" alt="Autumn Scene 6"></div>
+        <div class="photo-item"><img src="../photos/autumn film thubnail.png" alt="Autumn Scene 6"></div>
     </div>
 </div>
 
