Add new film page with Vimeo embed and update navigation

--- a/contact/index.html
+++ b/contact/index.html
@@ -25,6 +25,7 @@
                 <button class="dropdown-btn">FILMS</button>
                 <div class="dropdown-content">
                     <a href="../midnight-city">AUTUMN</a>
+                    <a href="../new-film">NEW FILM</a>
                 </div>
             </div>
             <a href="../contact" class="nav-link active">CONTACT</a>
