--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <button class="dropdown-btn">FILMS</button>
                 <div class="dropdown-content">
                     <a href="./midnight-city">AUTUMN</a>
+                    <a href="./new-film">NEW FILM</a>
                 </div>
             </div>
             <a href="./contact" class="nav-link">CONTACT</a>
@@ -50,12 +51,12 @@
             <h3 class="film-title">AUTUMN</h3>
         </a>
 
-        <div class="film-item" id="film2">
+        <a href="./new-film" class="film-item" id="film2" style="text-decoration: none; color: inherit;">
             <div class="film-image-wrapper">
                 <div class="placeholder-image">PLACEHOLDER</div>
             </div>
-            <h3 class="film-title">COMMING SOON...</h3>
-        </div>
+            <h3 class="film-title">NEW FILM</h3>
+        </a>
 
         <div class="film-item" id="film3">
             <div class="film-image-wrapper">
