--- a/new-film/index.html
+++ b/new-film/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AUTUMN</title>
+    <title>NEW FILM</title>
     <link rel="icon" type="image/png" href="../favicon.png">
     <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +47,7 @@
     <main class="film-detail">
         <!-- Film Title Section -->
         <div class="film-header">
-            <h2 class="film-detail-title">AUTUMN</h2>
+            <h2 class="film-detail-title">NEW FILM</h2>
             <p class="film-producer">Written, filmed and edited by P<i>TV</i></p>
         </div>
 
@@ -56,7 +56,7 @@
     <div class="video-wrapper">
         <div class="placeholder-video" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
             <iframe 
-                src="https://player.vimeo.com/video/1132043431" 
+                src="https://player.vimeo.com/video/1134298540" 
                 style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
                 frameborder="0" 
                 allow="autoplay; fullscreen; picture-in-picture" 
@@ -67,20 +67,7 @@
 </div>
         <!-- Photo Gallery Section -->
 <div class="photo-gallery">
-    <div class="photo-row">
-        <div class="photo-item"><img src="../photos/Screenshot 2025-10-30 at 19.53.26.png" alt="Autumn Scene 1"></div>
-        <div class="photo-item"><img src="../photos/Screenshot 2025-10-30 at 19.54.18.png" alt="Autumn Scene 2"></div>
-    </div>
-
-    <div class="photo-row">
-        <div class="photo-item"><img src="../photos/Screenshot 2025-10-30 at 19.54.51.png" alt="Autumn Scene 3"></div>
-        <div class="photo-item"><img src="../photos/Screenshot 2025-10-30 at 19.55.32.png" alt="Autumn Scene 4"></div>
-    </div>
-
-    <div class="photo-row">
-        <div class="photo-item"><img src="../photos/Screenshot 2025-10-30 at 19.56.12.png" alt="Autumn Scene 5"></div>
-        <div class="photo-item"><img src="../photos/autumn film thubnail.png" alt="Autumn Scene 6"></div>
-    </div>
+    <!-- Add photos here when available -->
 </div>
 
     </main>
@@ -92,3 +79,4 @@
     <script src="../script.js"></script>
 </body>
 </html>
+
