Rename folders: midnight-city to autumn, new-film to cyberpunk. Update all references and add CYBERPUNK film page

--- a/autumn/index.html
+++ b/autumn/index.html
@@ -24,8 +24,8 @@
             <div class="dropdown">
                 <button class="dropdown-btn active">FILMS</button>
                 <div class="dropdown-content">
-                    <a href="../midnight-city">AUTUMN</a>
-                    <a href="../new-film">NEW FILM</a>
+                    <a href="../autumn">AUTUMN</a>
+                    <a href="../cyberpunk">CYBERPUNK</a>
                 </div>
             </div>
             <a href="../contact" class="nav-link">CONTACT</a>
