--- a/contact/index.html
+++ b/contact/index.html
@@ -24,8 +24,8 @@
             <div class="dropdown">
                 <button class="dropdown-btn">FILMS</button>
                 <div class="dropdown-content">
-                    <a href="../midnight-city">AUTUMN</a>
-                    <a href="../new-film">NEW FILM</a>
+                    <a href="../autumn">AUTUMN</a>
+                    <a href="../cyberpunk">CYBERPUNK</a>
                 </div>
             </div>
             <a href="../contact" class="nav-link active">CONTACT</a>
@@ -52,7 +52,9 @@
             <h2><span class="p-letter">P</span><span style="font-style: italic;">TV</span></h2>
             <p class="contact-email"><a href="mailto:contact@petalontv.com">CONTACT@PETALONTV.COM</a></p>
             <p class="contact-bio">
-                I love transforming ideas into visuals that stand out. Working with my Sony FX3, I’m always striving to elevate my work and pushing toward something truly cinematic and impactful.
+                Cinematographer and visual storyteller with a passion for capturing moments that resonate. 
+                Specializing in narrative-driven imagery with a focus on composition, lighting, and mood. 
+                Based in Los Angeles, available worldwide.
             </p>
         </div>
     </main>
