--- a/cyberpunk/index.html
+++ b/cyberpunk/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEW FILM</title>
+    <title>CYBERPUNK</title>
     <link rel="icon" type="image/png" href="../favicon.png">
     <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,8 +24,8 @@
             <div class="dropdown">
                 <button class="dropdown-btn active">FILMS</button>
                 <div class="dropdown-content">
-                    <a href="../midnight-city">AUTUMN</a>
-                    <a href="../new-film">NEW FILM</a>
+                    <a href="../autumn">AUTUMN</a>
+                    <a href="../cyberpunk">CYBERPUNK</a>
                 </div>
             </div>
             <a href="../contact" class="nav-link">CONTACT</a>
@@ -47,7 +47,7 @@
     <main class="film-detail">
         <!-- Film Title Section -->
         <div class="film-header">
-            <h2 class="film-detail-title">NEW FILM</h2>
+            <h2 class="film-detail-title">CYBERPUNK</h2>
             <p class="film-producer">Written, filmed and edited by P<i>TV</i></p>
         </div>
 
@@ -67,7 +67,8 @@
 </div>
         <!-- Photo Gallery Section -->
 <div class="photo-gallery">
-    <!-- Add photos here when available -->
+    <!-- Photos will be added from photos/cyberpunk folder -->
+    <!-- Structure ready for when photos are uploaded -->
 </div>
 
     </main>
@@ -79,4 +80,5 @@
     <script src="../script.js"></script>
 </body>
 </html>
+
 
