--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="dropdown">
                 <button class="dropdown-btn">FILMS</button>
                 <div class="dropdown-content">
-                    <a href="./midnight-city">AUTUMN</a>
-                    <a href="./new-film">NEW FILM</a>
+                    <a href="./autumn">AUTUMN</a>
+                    <a href="./cyberpunk">CYBERPUNK</a>
                 </div>
             </div>
             <a href="./contact" class="nav-link">CONTACT</a>
@@ -44,18 +44,18 @@
 
     <!-- Main Content - Film Grid -->
     <main class="film-grid">
-        <a href="./midnight-city" class="film-item" id="film1" style="text-decoration: none; color: inherit;">
+        <a href="./autumn" class="film-item" id="film1" style="text-decoration: none; color: inherit;">
             <div class="film-image-wrapper">
                 <img src="./photos/autumn film thubnail.png" alt="Autumn film thumbnail" class="film-image">
             </div>
             <h3 class="film-title">AUTUMN</h3>
         </a>
 
-        <a href="./new-film" class="film-item" id="film2" style="text-decoration: none; color: inherit;">
+        <a href="./cyberpunk" class="film-item" id="film2" style="text-decoration: none; color: inherit;">
             <div class="film-image-wrapper">
-                <div class="placeholder-image">PLACEHOLDER</div>
+                <img src="./photos/Screenshot 2025-11-06 at 17.03.34.png" alt="Cyberpunk film thumbnail" class="film-image">
             </div>
-            <h3 class="film-title">NEW FILM</h3>
+            <h3 class="film-title">CYBERPUNK</h3>
         </a>
 
         <div class="film-item" id="film3">
