Add cyberpunk photos to gallery and update thumbnail reference

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <a href="./cyberpunk" class="film-item" id="film2" style="text-decoration: none; color: inherit;">
             <div class="film-image-wrapper">
-                <img src="./photos/Screenshot 2025-11-06 at 17.03.34.png" alt="Cyberpunk film thumbnail" class="film-image">
+                <img src="./photos/cyberpunk/Screenshot 2025-11-06 at 17.03.34.png" alt="Cyberpunk film thumbnail" class="film-image">
             </div>
             <h3 class="film-title">CYBERPUNK</h3>
         </a>
