--- a/cyberpunk/index.html
+++ b/cyberpunk/index.html
@@ -67,8 +67,15 @@
 </div>
         <!-- Photo Gallery Section -->
 <div class="photo-gallery">
-    <!-- Photos will be added from photos/cyberpunk folder -->
-    <!-- Structure ready for when photos are uploaded -->
+    <div class="photo-row">
+        <div class="photo-item"><img src="../photos/cyberpunk/Screenshot 2025-11-06 at 17.15.46.png" alt="Cyberpunk Scene 1"></div>
+        <div class="photo-item"><img src="../photos/cyberpunk/Screenshot 2025-11-06 at 17.16.04.png" alt="Cyberpunk Scene 2"></div>
+    </div>
+
+    <div class="photo-row">
+        <div class="photo-item"><img src="../photos/cyberpunk/Screenshot 2025-11-06 at 17.16.22.png" alt="Cyberpunk Scene 3"></div>
+        <div class="photo-item"><img src="../photos/cyberpunk/Screenshot 2025-11-06 at 17.17.13.png" alt="Cyberpunk Scene 4"></div>
+    </div>
 </div>
 
     </main>
