--- a/cyberpunk/index.html
+++ b/cyberpunk/index.html
@@ -76,6 +76,10 @@
         <div class="photo-item"><img src="../photos/cyberpunk/Screenshot 2025-11-06 at 17.16.22.png" alt="Cyberpunk Scene 3"></div>
         <div class="photo-item"><img src="../photos/cyberpunk/Screenshot 2025-11-06 at 17.17.13.png" alt="Cyberpunk Scene 4"></div>
     </div>
+
+    <div class="photo-row">
+        <div class="photo-item"><img src="../photos/cyberpunk/Screenshot 2025-11-06 at 17.38.41.png" alt="Cyberpunk Scene 5"></div>
+    </div>
 </div>
 
     </main>
