--- a/contact/index.html
+++ b/contact/index.html
@@ -52,9 +52,8 @@
             <h2><span class="p-letter">P</span><span style="font-style: italic;">TV</span></h2>
             <p class="contact-email"><a href="mailto:contact@petalontv.com">CONTACT@PETALONTV.COM</a></p>
             <p class="contact-bio">
-                Cinematographer and visual storyteller with a passion for capturing moments that resonate. 
-                Specializing in narrative-driven imagery with a focus on composition, lighting, and mood. 
-                Based in Los Angeles, available worldwide.
+                I love transforming ideas into visuals that stand out and leave an impression. 
+                Working with my Sony FX3, I’m always exploring new ways to elevate my work — pushing towards something truly cinematic. 
             </p>
         </div>
     </main>
