Add Creative Commons license to homepage footer

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <!-- Footer -->
     <footer class="footer">
         <p>CONTACT: <a href="mailto:contact@petalontv.com">CONTACT@PETALONTV.COM</a></p>
+        <p class="license">This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="" class="cc-icon"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" class="cc-icon"><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt="" class="cc-icon"><img src="https://mirrors.creativecommons.org/presskit/icons/nd.svg" alt="" class="cc-icon"></p>
     </footer>
 
     <script src="script.js"></script>
