--- a/contact/index.html
+++ b/contact/index.html
@@ -46,7 +46,7 @@
     <!-- Contact Content -->
     <main class="contact-container">
         <div class="contact-photo">
-            <div class="placeholder-profile">PROFILE PHOTO</div>
+            <div class="placeholder-profile"></div>
         </div>
         <div class="contact-info">
             <h2><span class="p-letter">P</span><span style="font-style: italic;">TV</span></h2>
