--- a/contact/index.html
+++ b/contact/index.html
@@ -28,6 +28,7 @@
                     <a href="../cyberpunk">CYBERPUNK</a>
                 </div>
             </div>
+            <a href="../color-grading" class="nav-link">COLOR GRADING</a>
             <a href="../contact" class="nav-link active">CONTACT</a>
         </nav>
         <nav class="nav-right">
