--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,6 +28,7 @@
                     <a href="./cyberpunk">CYBERPUNK</a>
                 </div>
             </div>
+            <a href="./color-grading" class="nav-link">COLOR GRADING</a>
             <a href="./contact" class="nav-link">CONTACT</a>
         </nav>
         <nav class="nav-right">
