Create Grading page with vertical before/after sliders, update navigation to GRADING

--- a/contact/index.html
+++ b/contact/index.html
@@ -28,7 +28,7 @@
                     <a href="../cyberpunk">CYBERPUNK</a>
                 </div>
             </div>
-            <a href="../color-grading" class="nav-link">COLOR GRADING</a>
+            <a href="../grading" class="nav-link">GRADING</a>
             <a href="../contact" class="nav-link active">CONTACT</a>
         </nav>
         <nav class="nav-right">
@@ -47,7 +47,7 @@
     <!-- Contact Content -->
     <main class="contact-container">
         <div class="contact-photo">
-            <div class="placeholder-profile"></div>
+            <div class="placeholder-profile">PROFILE PHOTO</div>
         </div>
         <div class="contact-info">
             <h2><span class="p-letter">P</span><span style="font-style: italic;">TV</span></h2>
