--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="./cyberpunk">CYBERPUNK</a>
                 </div>
             </div>
-            <a href="./color-grading" class="nav-link">COLOR GRADING</a>
+            <a href="./grading" class="nav-link">GRADING</a>
             <a href="./contact" class="nav-link">CONTACT</a>
         </nav>
         <nav class="nav-right">
