Change grading page to horizontal swipe slider (LOG left, GRADED right), favicon is already blue square

--- a/grading/index.html
+++ b/grading/index.html
@@ -52,18 +52,18 @@
             <p class="color-grading-subtitle">Before & After Comparison</p>
         </div>
 
-        <!-- Vertical Before/After Sliders -->
+        <!-- Horizontal Before/After Sliders -->
         <div class="before-after-gallery">
             <!-- Example 1 - Replace with your images -->
             <div class="before-after-item">
-                <div class="before-after-slider vertical">
+                <div class="before-after-slider">
                     <div class="before-after-wrapper">
                         <img src="../photos/Grading/example1-graded.jpg" alt="Color Graded" class="after-image">
                         <div class="before-container">
                             <img src="../photos/Grading/example1-log.jpg" alt="Log Footage" class="before-image">
                         </div>
                         <div class="slider-divider"></div>
-                        <input type="range" class="slider-control" min="0" max="100" value="50" orient="vertical">
+                        <input type="range" class="slider-control" min="0" max="100" value="0">
                     </div>
                     <div class="slider-labels">
                         <span class="label-log">LOG</span>
@@ -74,14 +74,14 @@
 
             <!-- Example 2 - Add more as needed -->
             <div class="before-after-item">
-                <div class="before-after-slider vertical">
+                <div class="before-after-slider">
                     <div class="before-after-wrapper">
                         <img src="../photos/Grading/example2-graded.jpg" alt="Color Graded" class="after-image">
                         <div class="before-container">
                             <img src="../photos/Grading/example2-log.jpg" alt="Log Footage" class="before-image">
                         </div>
                         <div class="slider-divider"></div>
-                        <input type="range" class="slider-control" min="0" max="100" value="50" orient="vertical">
+                        <input type="range" class="slider-control" min="0" max="100" value="0">
                     </div>
                     <div class="slider-labels">
                         <span class="label-log">LOG</span>
@@ -103,4 +103,5 @@
     <script src="grading.js"></script>
 </body>
 </html>
+
 
