Smooth homepage animations, change grading slider to vertical with nicer styling

--- a/grading/index.html
+++ b/grading/index.html
@@ -52,7 +52,7 @@
             <p class="color-grading-subtitle">Before & After Comparison</p>
         </div>
 
-        <!-- Horizontal Before/After Sliders -->
+        <!-- Vertical Before/After Sliders -->
         <div class="before-after-gallery">
             <!-- Example 1 - Replace with your images -->
             <div class="before-after-item">
