Fix: Set title to PTV and restore Nagel font

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="PTV" />
   <meta name="twitter:description" content="PTV — Full screen immersive retro CRT simulation." />
+  <title>PTV</title>
 
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
